--- a/Stylesheets/main.css
+++ b/Stylesheets/main.css
@@ -37,7 +37,7 @@ h1 {
 	margin: 0 auto;
 }
 header ul li a {
-/*	margin: 1%;*/
+	margin: 2%;
 	color: gray;
 	text-decoration: none;
 	font-size: 170%;
@@ -73,7 +73,7 @@ ul li {
 	background-color: rgba(255,255,255,1);
 	list-style: none;
 	position: absolute;
-	left: -25%;
+	left: -20%;
 /*	width: 250%;*/
 	text-align: center;
 	z-index: 1;
